# warfork-qfusion

./: .gitignore  .travis.yml  README.md
.circleci/: config.yml
.github/workflows/: build.yml
assets/: autoexec_postinit.cfg  default.cfg  tvserver_autoexec.cfg
assets/configs/: remove_ultralow.cfg  ultralow.cfg
assets/data0_21pure/glsl/: defaultCelshade.frag.glsl  defaultCelshade.vert.glsl  defaultDistortion.frag.glsl  defaultDistortion.vert.glsl  defaultMaterial.frag.glsl  defaultMaterial.vert.glsl  defaultOutline.frag.glsl  defaultOutline.vert.glsl  defaultQ3AShader.frag.glsl  defaultQ3AShader.vert.glsl
assets/data0_21pure/scripts/: effects.shader  gfx.shader
assets/map_pressure/scripts/: time.shader
assets/map_return/scripts/: return.shader
assets/map_shredder/scripts/: evillair_eu.shader  toxic.shader
libsrcs/src/: README.md
source/: CMakeLists.txt  compile_commands.json
source/angelwrap/: qas_angelwrap.cpp  qas_local.h
source/angelwrap/addon/: addon_any.cpp  addon_any.h  addon_dictionary.cpp  addon_scriptarray.cpp  addon_scriptarray.h  addon_string.cpp  addon_stringutils.cpp
source/cgame/: blocklist.h  cg_boneposes.cpp  cg_chat.cpp  cg_cmds.cpp  cg_decals.cpp  cg_democams.cpp  cg_draw.cpp  cg_effects.cpp  cg_ents.cpp  cg_events.cpp  cg_hud.cpp  cg_lents.cpp  cg_local.h  cg_main.cpp  cg_media.cpp  cg_players.cpp  cg_pmodels.cpp  cg_polys.cpp  cg_public.h  cg_scoreboard.cpp  cg_screen.cpp  cg_syscalls.cpp  cg_syscalls.h  cg_teams.cpp  cg_test.cpp  cg_view.cpp
source/cin/: cin.c  cin_main.c
source/client/: CMakeLists.txt  cl_cin.c  cl_demo.c  cl_discord.c  cl_game.c  cl_main.c  cl_mm.c  cl_parse.c  cl_presence.c  cl_screen.c  cl_serverlist.c  cl_steam.c  cl_ui.c  cl_vid.c  client.h  console.c  ftlib.c
source/ftlib/: ftlib_public.h  ftlib_syscalls.c
source/game/: g_ascript.cpp  g_callvotes.cpp  g_cmds.cpp  g_local.h  g_main.cpp  g_mm.cpp  g_public.h  g_svcmds.cpp  g_syscalls.cpp  g_web.cpp  p_client.cpp
source/gameshared/: gs_qrespath.h  q_arch.h  q_comref.h  q_sds.c  q_sds.h  q_shared.c  q_shared.h
source/qcommon/: cm_local.h  cm_main.c  cm_q1bsp.c  cm_q2bsp.c  cm_q3bsp.c  cmd.c  cmodel.h  common.c  compression.h  files.c  library.c  mem.c  mem.h  mod_fs.h  mod_mem.h  qcommon.h  qfiles.h  steam.c  steam.h  version.h
source/ref_base/: CMakeLists.txt  gl_format.h  r_ktx_loader.c  r_ktx_loader.h  r_math_util.c  r_math_util.h  r_math_util_sintable.h.inl  r_public.h  r_texture_buf.c  r_texture_buf.h  r_texture_decode.c  r_texture_decode.h  r_texture_format.c  r_texture_format.h  ref_mod.h
source/ref_base/test/: r_texture_buffer_test.c
source/ref_gl/: CMakeLists.txt  qgl.h  r_alias.c  r_cmdque.c  r_cmds.c  r_frontend.c  r_frontend.h  r_glimp.h  r_image.c  r_image.h  r_imagelib.c  r_imagelib.h  r_light.c  r_local.h  r_main.c  r_model.c  r_model.h  r_program.c  r_public.c  r_q1q2bsp.c  r_q3bsp.c  r_register.c  r_shader.c  r_shader.h  r_shadow.c  r_texture_buffer_load.c  r_texture_buffer_load.h  r_vbo.c
source/sdl/: sdl_glw.c  sdl_sys.c  sdl_threads.c  sdl_vid.c
source/server/: CMakeLists.txt  server.h  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_oob.c  sv_steam.c
source/steamshim/: CMakeLists.txt
source/steamshim/src/: os.cpp  os.h  pipe.cpp  steamshim.h  steamshim_private.h  steamshim_types.h
source/steamshim/src/child/: SteamCallbacks.cpp  child.cpp  child.h  child_private.h
source/steamshim/src/parent/: SteamBridge.cpp  SteamCallbacks.cpp  parent.cpp  parent.h  parent_private.h
source/tv_server/: CMakeLists.txt  tv_downstream.c  tv_local.h  tv_main.c
source/ui/: ui_public.cpp  ui_public.h
source/ui/as/: as_bind_dom.cpp  as_bind_game.cpp  as_bind_window.cpp  asbind.h  asmodule.cpp  asmodule.h
source/ui/datasources/: ui_gametypes_datasource.cpp  (+6 more)
source/unix/: unix_clipboard.c  unix_threads.c
source/win32/: win_clipboard.c  win_input.c  win_sys.c  win_threads.c  win_vid.c
(+127 files in other folders)
